--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -225,12 +225,12 @@
       h1
         font-size: 26px
     .poll-header-votes
-      width: 50%
+      width: 100%
       margin-bottom: 20px
       .poll-header-votes-border
         width: 100%
         @include boxsizing
-        height: 32px
+        height: inherit
         .poll-header-votes-count
           font-size: 32px
           line-height: inherit
