[stream] only published

--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -35,18 +35,19 @@
                 = course.short_description
       .home-section
         %hr
-      .home-section
-        %h2
-          = link_to 'Projects', projects_path, class: 'orange-link'
-        - @projects.each.with_index do |project, index|
-          .home-standard-item
-            .home-standard-item-image
-              = link_to project_path(project) do
-                = image_tag filepicker_stream_image(project.featured_image)
-            .home-standard-item-text
-              = link_to project_path(project) do
-                %h3= project.title
-              = project.description
+      - if @projects.any?
+        .home-section
+          %h2
+            = link_to 'Projects', projects_path, class: 'orange-link'
+          - @projects.each.with_index do |project, index|
+            .home-standard-item
+              .home-standard-item-image
+                = link_to project_path(project) do
+                  = image_tag filepicker_stream_image(project.featured_image)
+              .home-standard-item-text
+                = link_to project_path(project) do
+                  %h3= project.title
+                = project.description
     .span4
       %h2 
         = link_to 'Community Activity', community_activity_path, class: 'orange-link'
