--- a/app/assets/stylesheets/stream.css.sass
+++ b/app/assets/stylesheets/stream.css.sass
@@ -22,3 +22,9 @@
     float: left
     width: 100%
     margin-bottom: 20px
+
+.stream-spinner
+  color: $orange
+  font-size: 40px
+  text-align: center
+  margin: 30px 0px
