--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -65,8 +65,9 @@
           /     %div(ng-include src="'stream_views/upload_create.html'")
           /   %div(ng-switch-when='Vote_create')
           /     %div(ng-include src="'stream_views/vote_create.html'")
-
-        .stream-more
+        %div.stream-spinner(ng-hide="hideSpinner")
+          %i.icon-spinner.icon-spin.icon-large
+        .stream-more(ng-show="showMoreButton" ng-cloak)
           / %a.btn.btn-large.btn-block.btn-outline-blue-large(ng-click="loadMore()")
           /   See More
           = link_to 'See More', community_activity_path, class: 'btn btn-large btn-block btn-outline-blue-large'
