--- a/app/views/streams/feed.html.haml
+++ b/app/views/streams/feed.html.haml
@@ -5,7 +5,8 @@
       .stream(ng-controller='StreamsController' ng-init="init()")
         %div(ng-repeat='stream in streams')
           %div(ng-include src="streamViewTemplate(stream)")
-
+        %div.stream-spinner(ng-hide="hideSpinner")
+          %i.icon-spinner.icon-spin.icon-large
         .stream-more
-          %a.btn.btn-large.btn-block.btn-outline-blue-large(ng-click="loadMore()")
+          %a.btn.btn-large.btn-block.btn-outline-blue-large(ng-click="loadMore()" ng-show="showMoreButton" ng-cloak)
             See More
