--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -32,8 +32,8 @@
           = link_to 'Edit Profile', edit_user_profile_path, class: 'btn btn-primary btn-block'
           = link_to 'Sign out', sign_out_path, class: 'btn btn-primary btn-block'
         - else
-          = link_to followership_path(@user), method: :put, class: 'btn btn-primary btn-block' do
-            = current_user.follows?(@user) ? 'Unfollow' : 'Follow'
+          / = link_to followership_path(@user), method: :put, class: 'btn btn-primary btn-block' do
+          /   = current_user.follows?(@user) ? 'Unfollow' : 'Follow'
     .span5.nav-tabs-gray
       %h4 Bio
 
