--- a/app/views/home/_signed_in_homepage.html.haml
+++ b/app/views/home/_signed_in_homepage.html.haml
@@ -74,4 +74,4 @@
     .span2
 
 :javascript
-  mixpanel.track('Signed In Hompage Viewed', {'url' : window.location.pathname});
+  mixpanel.track('Viewed Signed in Homepage', {'url' : window.location.pathname});
