--- a/app/views/home/_standard_homepage.html.haml
+++ b/app/views/home/_standard_homepage.html.haml
@@ -111,3 +111,6 @@
               = hidden_field_tag :signed_up_from, 'homepage_cta'
               %p= email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
               %p= submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large btn-block', id: 'subscribe-email'
+
+:javascript
+  mixpanel.track('Viewed Signed in Homepage', {'url' : window.location.pathname});
