--- a/app/views/stream_views/upload_create.html.haml
+++ b/app/views/stream_views/upload_create.html.haml
@@ -5,7 +5,7 @@
       %a(ng-href="/profiles/{{stream.user.slug}}" onclick='track_viewed_profile_through_stream();')
         {{stream.user.name}}
       uploaded a photo
-      %a(ng-href="/profiles/{{stream.trackable.upload.path}}" onclick='track_viewed_item_through_stream();')
+      %a(ng-href="{{stream.trackable.upload.path}}" onclick='track_viewed_item_through_stream();')
         {{stream.trackable.upload.title}}.
       %small
         {{stream.created_at|date:'MMM d, yyyy @ h:mma'}}
