--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -1,103 +1,158 @@
 .container
-  .row.section
+  .row.section#intro
     .span3.offset1
       = image_tag ('http://placehold.it/250x200')
     .span8
       %h1 ChefSteps Knife Collection
       %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-
-#creative-kit.modal.hide.fade
+#asai-ao-1.modal.hide.fade
   .modal-header
-    %h3 The Creative Kit
+    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
+    %h3 Asai AO
   .modal-body
-    = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
-    %ul.section{style: "-webkit-column-count: 2"}
-      %li
+    = image_tag 'https://www.filepicker.io/api/file/xgPYrtt9ROuDw4Qxany3'
+    .section
+      = image_tag ('http://placehold.it/125x75')
+      = image_tag ('http://placehold.it/125x75')
+    %p.section Curabitur blandit tempus porttitor. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+
+  .modal-footer
+    = buy_now(151280645,123)
+
+#asai-ao-2.modal.hide.fade
+  .modal-header
+    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
+    %h3 Asai AO
+  .modal-body
+    = image_tag 'https://www.filepicker.io/api/file/uAG5HZMRxCmnSpb5a7mA'
+    %p.section Curabitur blandit tempus porttitor. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
   .modal-footer.section
-    %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
+    = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
 
 
-#enthusiast-kit.modal.hide.fade
+#ohishi-hammer-1.modal.hide.fade
   .modal-header
-    %h3 The Enthusiast Kit
+    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
+    %h3 Ohishi Hammer
   .modal-body
-    = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
+    = image_tag 'https://www.filepicker.io/api/file/LNrdE7aRRLSaKt8gKtNM'
+  .modal-footer.section
+    = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
+
+
+
+#ohishi-hammer-2.modal.hide.fade
+  .modal-header
+    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
+    %h3 Ohishi Hammer
+  .modal-body
+    = image_tag 'https://www.filepicker.io/api/file/naTWQB6ySXOVZR1V4plT'
     %ul.section{style: "-webkit-column-count: 2"}
       %li    
   .modal-footer.section
-    %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
 
 
-#professional-kit.modal.hide.fade
+#yoshikane-sld-1.modal.hide.fade
   .modal-header
-    %h3 The Professional Kit
+    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
+    %h3 Yoshikane SLD
   .modal-body
-    = image_tag 'https://www.filepicker.io/api/file/LQAZxKYkToixUF6wQ7aA'
-    %ul.section{style: "-webkit-column-count: 2"}
-      %li
+    = image_tag 'https://www.filepicker.io/api/file/7dQWY7MVTWGFEuE3wUAi'
   .modal-footer.section
-    %a(class="btn btn-secondary" data-dismiss="modal" aria-hidden="true") Close
 
-%hr
 
-.container
+#yoshikane-sld-2.modal.hide.fade
+  .modal-header
+    %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
+    %h3 Yoshikane SLD
+  .modal-body
+    = image_tag 'https://www.filepicker.io/api/file/zxxRDkwzTDqesXVpJrle'
+  .modal-footer.section
+
+
+.knife
   .row.section
     .span8.offset2.media
       .pull-left
         = image_tag 'http://placehold.it/100x100', :class => "media-object"
       .media-body
-        %h4.media-heading Pellentesque Consectetur
+        %h4.media-heading Asai AO
         Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 
 
 .container-fluid
   .container
     .row.section
-      .span12.section
+      .span12.section.button-container
+        #asai-1
+          %a(href='#asai-ao-1' data-target='#asai-ao-1' data-toggle='modal') +
+        #asai-2
+          %a(href='#asai-ao-2' data-target='#asai-ao-2' data-toggle='modal') +
         = image_tag ('https://www.filepicker.io/api/file/qzxRQ0rPS2j4tFZKutmg')
 
-%hr.section
 
-
-.container
+.knife
   .row.section
     .span8.offset2.media
       .pull-left
         = image_tag 'http://placehold.it/100x100', :class => "media-object"
       .media-body
-        %h4.media-heading Pellentesque Consectetur
+        %h4.media-heading Ohishi Hammer
         Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+
+
 
 .container-fluid
   .container
     .row.section
-      .span12.section
+      .span12.section.button-container
+        #ohishi-1
+          %a(href='#ohishi-hammer-1' data-target='#ohishi-hammer-1' data-toggle='modal') +
+        #ohishi-2
+          %a(href='#asai-hammer-2' data-target='#ohishi-hammer-2' data-toggle='modal') +
         = image_tag ('https://www.filepicker.io/api/file/XPuEItyPTOaL2iO5r79j')
 
-%hr.section
+.knife
+  .row.section
+    .span10.offset1.media
+      .pull-left
+        = image_tag 'http://placehold.it/100x100', :class => "media-object"
+      .media-body
+        %h4.media-heading Yoshikane SLD
+        Widely regarded as one of the most influential living knifemakers in Japan, Mr. Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry from his shop in Sanjo City, in the Niigata Prefecture of Japan. Here, nestled in a valley along the northwestern coast of the Japanese Alps region, bladesmithing is a long-standing tradition dating back to the Edo period, when Japanese artisans manufactured the very first western-style pointed knives in Japan. Now, Sanjo City is home to some of the highest-quality handmade knifemaking in the world, and Mr. Tsuneo Yoshida continues and elevates that tradition in earnest. Yoshida forged his first knife at the age of 18, after learning from his grandfather, and has now passed it along to his two nephews, who will take over the business when Yoshida retires. The tight-knit Yoshida family rises early each morning, and meticulously hand-makes each and every Yoshikane knife using rare, hard-to-source materials like blonde buffalo horn, mammoth ivory, and enju wood. Every Yoshikane knife is a work of art, but their beauty is certainly matched in performance—these blades are considered among the highest-caliber available, with exceptional edge-holding and comfortable feel.
+.container-fluid
+  .container
+    .row.section
+      .span12.section.button-container
+        #yoshikane-1
+          %a(href='#yoshikane-sld-1' data-target='#yoshikane-sld-1' data-toggle='modal') +
+        #yoshikane-2
+          %a(href='#yoshikane-sld-2' data-target='#yoshikane-sld-2' data-toggle='modal') +
+
+        = image_tag ('https://www.filepicker.io/api/file/MfWzTk4YRGm7SOQf2iUT')
 
 
-.container
+
+.knife
   .row.section
     .span8.offset2.media
       .pull-left
         = image_tag 'http://placehold.it/100x100', :class => "media-object"
       .media-body
-        %h4.media-heading Pellentesque Consectetur
+        %h4.media-heading Sharpening Stones Kit
         Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+
 
 .container-fluid
   .container
     .row.section
       .span12.section
-        = image_tag ('https://www.filepicker.io/api/file/MfWzTk4YRGm7SOQf2iUT')
+        = image_tag ('https://www.filepicker.io/api/file/t3l7VdjR1qjMMWTNufwJ')
 
-%hr.section
-
-.container-fluid
-  .row-fluid
-    .container
-      .row.section
 
 = render 'layouts/footer'
+
+:javascript
+  $(window).scroll(function(){if($(window).scrollTop() <= 50){ $('#intro').fadeIn('slow', 'easeInOutQuad'); $('.knife').removeClass('alt')} else { $('#intro').fadeOut('fast','easeInOutQuad'); $('.knife').addClass('alt'); } });
+
