[knife-products] checkpoint

--- a/app/assets/stylesheets/knife_collection.css.sass
+++ b/app/assets/stylesheets/knife_collection.css.sass
@@ -4,9 +4,11 @@
   position: fixed
   z-index: -100
 
+.knife.first
+  margin-top: 250px
+
 .knife
-  margin-top: 200px
-  padding: 50px
+  padding: 40px
   -webkit-transition-duration: 0.55s
   -moz-transition-duration: 0.5s
   -o-transition-duration: 0.5s
@@ -17,6 +19,8 @@
 
 .knife.alt
   background: #f1f1f1
+  border-bottom: 2px solid $orange
+  padding: 20px 40px 30px 40px
 
 .button-container
   position: relative
