--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -9,7 +9,7 @@
 #asai-ao-1.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Asai AO
+    %h3 Asai Enji Damascus Chef's Knife
   .modal-body
     = image_tag 'https://www.filepicker.io/api/file/xgPYrtt9ROuDw4Qxany3'
     .section
@@ -18,17 +18,17 @@
     %p.section Curabitur blandit tempus porttitor. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
 
   .modal-footer
-    = buy_now(151280645,123)
+    = buy_now(345915979,123)
 
 #asai-ao-2.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Asai AO
+    %h3 Asai Enji Damascus Utility - Fruit Knife
   .modal-body
     = image_tag 'https://www.filepicker.io/api/file/uAG5HZMRxCmnSpb5a7mA'
     %p.section Curabitur blandit tempus porttitor. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
   .modal-footer.section
-    = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
+    = buy_now(151280121,20)
 
 
 #ohishi-hammer-1.modal.hide.fade
@@ -38,7 +38,7 @@
   .modal-body
     = image_tag 'https://www.filepicker.io/api/file/LNrdE7aRRLSaKt8gKtNM'
   .modal-footer.section
-    = buy_now(Course::SPHERIFICATION_CREATIVE[:variant_id], Course::SPHERIFICATION_CREATIVE[:price])
+    = buy_now(151280121,20)
 
 
 
@@ -71,7 +71,7 @@
   .modal-footer.section
 
 
-.knife
+.knife.first
   .row.section
     .span8.offset2.media
       .pull-left
@@ -92,7 +92,7 @@
         = image_tag ('https://www.filepicker.io/api/file/qzxRQ0rPS2j4tFZKutmg')
 
 
-.knife
+.knife.section
   .row.section
     .span8.offset2.media
       .pull-left
@@ -113,7 +113,7 @@
           %a(href='#asai-hammer-2' data-target='#ohishi-hammer-2' data-toggle='modal') +
         = image_tag ('https://www.filepicker.io/api/file/XPuEItyPTOaL2iO5r79j')
 
-.knife
+.knife.section
   .row.section
     .span10.offset1.media
       .pull-left
@@ -134,7 +134,7 @@
 
 
 
-.knife
+.knife.section
   .row.section
     .span8.offset2.media
       .pull-left
