--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1960,10 +1960,14 @@ csingredienteditpair
 
   .ordered-steps
     .ordered-step-item
+      margin: 0px
       .step-number
-        width: 15%
+        width: 20%
+        font-size: 24px
+        padding-top: 10px
       .step-content
-        width: 85%
+        width: 80%
+        padding-top: 10px
 
   .navbar .nav > li > .dropdown-menu li a 
     color: #333
