--- a/app/views/pages/knife_collection.html.haml
+++ b/app/views/pages/knife_collection.html.haml
@@ -4,18 +4,22 @@
       = image_tag ('http://placehold.it/250x200')
     .span8
       %h1 ChefSteps Knife Collection
-      %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      %p An exceptional set of knives should be the cornerstone of a cook’s arsenal. They become extensions of his own hands; the tools with which he creates art and brings refinement to the table. A beautiful, high-quality set will follow a cook anywhere and last a lifetime if properly cared for. Handcrafted Japanese knives in particular bring elegance and sophistication to any dish—a perfectly sliced piece of salmon; a delicate chiffonade; a meticulous dice; all expertly executed with slender, high-performance Japanese blades. Our readers have asked what knives we use when we cook, and this curated collection of hand-forged artisan knives, each completely unique and in finite supply, is our answer. In other words: Only the best.
 
 #asai-ao-1.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Asai Enji Damascus Chef's Knife
+    %h3 Asai Chef's Knife
   .modal-body
-    = image_tag 'https://www.filepicker.io/api/file/xgPYrtt9ROuDw4Qxany3'
-    .section
-      = image_tag ('http://placehold.it/125x75')
-      = image_tag ('http://placehold.it/125x75')
-    %p.section Curabitur blandit tempus porttitor. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+    = image_tag 'https://www.filepicker.io/api/file/xgPYrtt9ROuDw4Qxany3', :class => "main-image"
+    .row.section
+      .span2
+        %a(href="https://www.filepicker.io/api/file/RlVj5HwlRJgi431Kcqsw")
+          = image_tag 'https://www.filepicker.io/api/file/RlVj5HwlRJgi431Kcqsw', :id => 'asai-second'
+      .span2
+        %a(href="https://www.filepicker.io/api/file/xgPYrtt9ROuDw4Qxany3")
+          = image_tag 'https://www.filepicker.io/api/file/xgPYrtt9ROuDw4Qxany3', :id => 'asai-second'
+    %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
 
   .modal-footer
     = buy_now(345915979,123)
@@ -23,10 +27,10 @@
 #asai-ao-2.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Asai Enji Damascus Utility - Fruit Knife
+    %h3 Asai Utility Knife
   .modal-body
-    = image_tag 'https://www.filepicker.io/api/file/uAG5HZMRxCmnSpb5a7mA'
-    %p.section Curabitur blandit tempus porttitor. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+    = image_tag 'https://www.filepicker.io/api/file/uAG5HZMRxCmnSpb5a7mA', :class => "main-image"
+    %p.section This high performance detail knife is made with the finest Japanese carbon steel for exceptional edge holding. A brushed stainless steel blade seems understated at first look (at least for Asai, whose knives usually feature highly stylized blades), but there’s intrigue here: after a few weeks of use, the carbon steel core gives way to a remarkable blue patina that need not be removed.
   .modal-footer.section
     = buy_now(151280121,20)
 
@@ -34,9 +38,10 @@
 #ohishi-hammer-1.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Ohishi Hammer
+    %h3 Ohishi Chef's Knife
   .modal-body
     = image_tag 'https://www.filepicker.io/api/file/LNrdE7aRRLSaKt8gKtNM'
+    %p.section With its thin blade geometry, solid pakkawood handle, and hammer finish, this knife is both beautiful and versatile. The blade has a VG10 super-steel core surrounded by 15 layers of stainless damascus for exceptional edge holding. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.  
   .modal-footer.section
     = buy_now(151280121,20)
 
@@ -45,41 +50,43 @@
 #ohishi-hammer-2.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Ohishi Hammer
+    %h3 Ohishi Utility Knife
   .modal-body
     = image_tag 'https://www.filepicker.io/api/file/naTWQB6ySXOVZR1V4plT'
-    %ul.section{style: "-webkit-column-count: 2"}
-      %li    
+    %p.section Perfect as a general purpose kitchen knife, this long, slender utility blade has a VG10 super-steel core for clean cutting and a balanced pakkawood handle that’s durable and moisture-resistant. The elegant tsuchime finish (meaning “hammered” in Japanese) forces food to fall away from the blade for enhanced efficiency.
   .modal-footer.section
-
+    = buy_now(151280121,20)
 
 #yoshikane-sld-1.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Yoshikane SLD
+    %h3 Yoshikane Chef's Knife
   .modal-body
     = image_tag 'https://www.filepicker.io/api/file/7dQWY7MVTWGFEuE3wUAi'
+    %p.section This elegant all-purpose chef’s knife features a long, slim blade perfect for sawing meat and vegetables, with a subtly uneven surface that prevents food from sticking. It features extremely rare blond buffalo horn ferrules, an ambidextrous enju wood handle, and a slim two-tone blade for a perfectly balanced, exceptionally handsome knife.
   .modal-footer.section
-
+    = buy_now(151280121,20)
 
 #yoshikane-sld-2.modal.hide.fade
   .modal-header
     %button(class="close" data-dismiss="modal" aria-hidden="true") &times;
-    %h3 Yoshikane SLD
-  .modal-body
-    = image_tag 'https://www.filepicker.io/api/file/zxxRDkwzTDqesXVpJrle'
+    %h3 Yoshikane Utility Knife
+  .modal-body.media
+    .pagination-centered
+      = image_tag 'https://www.filepicker.io/api/file/zxxRDkwzTDqesXVpJrle/convert?fit=max&h=355'
+    .media-body
+      %p.section Best for detail slicing (think tomatoes and garlic), this utility knife by Yoshikane has a smooth, slender blade comprised of SLD stainless steel (core) and stainless steel damascus (surface) that slides easily through food. The blade’s undulating pattern together with its light enju wood handle (the same wood used for making Shinto shrines) makes it a perfect balance of artistry and performance.
   .modal-footer.section
-
+    = buy_now(151280121,20)
 
 .knife.first
   .row.section
-    .span8.offset2.media
+    .span10.offset2.media
       .pull-left
         = image_tag 'http://placehold.it/100x100', :class => "media-object"
       .media-body
         %h4.media-heading Asai AO
-        Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-
+        High in the Japanese Alps, in the small town of Takefu in the Fukui Prefecture, fifth-generation blacksmith Masami Asai forges some of the most distinctive handmade kitchen knives in the world. 
 
 .container-fluid
   .container
@@ -94,12 +101,10 @@
 
 .knife.section
   .row.section
-    .span8.offset2.media
-      .pull-left
-        = image_tag 'http://placehold.it/100x100', :class => "media-object"
+    .span10.offset2.media
       .media-body
         %h4.media-heading Ohishi Hammer
-        Cras mattis consectetur purus sit amet fermentum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        Ohishi produces some of the finest-quality factory knives in the world, with stylized, ultra-thin blades that surpass most German and American handmade knives in both performance and beauty.
 
 
 
@@ -115,12 +120,14 @@
 
 .knife.section
   .row.section
-    .span10.offset1.media
+    .span10.offset2.media
       .pull-left
         = image_tag 'http://placehold.it/100x100', :class => "media-object"
       .media-body
-        %h4.media-heading Yoshikane SLD
-        Widely regarded as one of the most influential living knifemakers in Japan, Mr. Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry from his shop in Sanjo City, in the Niigata Prefecture of Japan. Here, nestled in a valley along the northwestern coast of the Japanese Alps region, bladesmithing is a long-standing tradition dating back to the Edo period, when Japanese artisans manufactured the very first western-style pointed knives in Japan. Now, Sanjo City is home to some of the highest-quality handmade knifemaking in the world, and Mr. Tsuneo Yoshida continues and elevates that tradition in earnest. Yoshida forged his first knife at the age of 18, after learning from his grandfather, and has now passed it along to his two nephews, who will take over the business when Yoshida retires. The tight-knit Yoshida family rises early each morning, and meticulously hand-makes each and every Yoshikane knife using rare, hard-to-source materials like blonde buffalo horn, mammoth ivory, and enju wood. Every Yoshikane knife is a work of art, but their beauty is certainly matched in performance—these blades are considered among the highest-caliber available, with exceptional edge-holding and comfortable feel.
+        %h4.media-heading Yoshikane 
+        Widely regarded as one of the most influential knifemakers in Japan, Tsuneo Yoshida handcrafts each Yoshikane knife with unmatched precision and artistry in his shop in Sanjo City.  Every Yoshikane knife is a work of art, each completely unique in its handmade construction, with a beauty matched only by performance—these blades are considered among the highest-quality available, with exceptional edge holding and comfortable feel.
+
+
 .container-fluid
   .container
     .row.section
@@ -136,7 +143,7 @@
 
 .knife.section
   .row.section
-    .span8.offset2.media
+    .span10.offset2.media
       .pull-left
         = image_tag 'http://placehold.it/100x100', :class => "media-object"
       .media-body
@@ -153,6 +160,5 @@
 
 = render 'layouts/footer'
 
-:javascript
-  $(window).scroll(function(){if($(window).scrollTop() <= 50){ $('#intro').fadeIn('slow', 'easeInOutQuad'); $('.knife').removeClass('alt')} else { $('#intro').fadeOut('fast','easeInOutQuad'); $('.knife').addClass('alt'); } });
+
 
