--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -28,7 +28,8 @@
                     %i.icon-angle-down
                   %ul.dropdown-menu
                     .dropdown-background
-                    %li= link_to 'Recipe Gallery', gallery_index_url(activity_type: "Recipe")
+                    %li= link_to 'ChefSteps Recipes', gallery_index_url(activity_type: "Recipe")
+                    %li= link_to 'Community Recipes', gallery_index_url(source: "community")
                     %li= link_to 'Add Recipe', new_activity_url
                 %li.dropdown
                   .nav-item-border
